--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -48,7 +48,7 @@
           <li>Действует 3 месяца</li>
           <li>Приоритетная запись на удобное время</li>
           <li>Поддержка между сессиями (текстовые вопросы)</li>
-          <li>Гарантия результата или возврат средств*</li>
+          <li>Прозрачные условия работы и поддержка на каждом этапе</li>
           <li>Возможна оплата в любой валюте по договорённости</li>
         </ul>
 
@@ -71,8 +71,7 @@
         <li><strong>Оплата:</strong> Перевод на карту, СБП или другие способы оплаты.</li>
         <li><strong>Конфиденциальность:</strong> Все разговоры остаются между нами. Я не записываю сессии без вашего
           разрешения.</li>
-        <li><strong>* Гарантия:</strong> Если после 5 сессий вы не видите улучшений и выполняли домашние задания,
-          возвращаю часть стоимости пакета.</li>
+        <li><strong>* Условия работы:</strong> Прозрачные условия работы и поддержка на каждом этапе. Все детали обсуждаются на вводной встрече.</li>
       </ul>
     </div>
 
