--- a/layouts/partials/about.html
+++ b/layouts/partials/about.html
@@ -46,7 +46,7 @@
                   d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z" />
               </svg>
               <h4>Краткосрочность</h4>
-              <p>КПТ — краткосрочный метод, фокусируется на конкретных целях и измеримых результатах.</p>
+              <p>КПТ — краткосрочный метод, фокусируется на конкретных целях и отслеживании изменений.</p>
             </div>
 
             <div class="principle">
@@ -55,7 +55,7 @@
                   d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z" />
               </svg>
               <h4>Прозрачные цели</h4>
-              <p>С первой встречи составляем план работы с конкретными целями и критериями успеха.</p>
+              <p>С первой встречи составляем план работы с понятными целями и способами отслеживания изменений.</p>
             </div>
           </div>
         </div>
