--- a/layouts/partials/benefits.html
+++ b/layouts/partials/benefits.html
@@ -34,7 +34,7 @@
         <strong>Метод: КПТ</strong><br>(когнитивно-поведенческая терапия)
       </div>
       <p class="method-description">
-        Научно обоснованный метод работы с тревожными состояниями, рекомендованный ВОЗ.
+        Научно обоснованный метод работы с тревожными состояниями.
       </p>
     </div>
   </div>
