--- a/layouts/partials/pricing.html
+++ b/layouts/partials/pricing.html
@@ -76,7 +76,7 @@
     </div>
 
     <div class="pricing__faq-link">
-      <p>Остались вопросы? Смотрите <a href="#faq">раздел FAQ</a> или запишитесь на бесплатную диагностику (30 минут).
+      <p>Остались вопросы? Смотрите <a href="#faq">раздел FAQ</a> или запишитесь на вводную встречу (30 минут).
       </p>
     </div>
   </div>
