--- a/layouts/partials/hero.html
+++ b/layouts/partials/hero.html
@@ -12,9 +12,9 @@
       </div>
 
       <div class="hero__cta">
-        <a href="#cta-final" class="btn btn--primary" aria-label="Записаться на бесплатную диагностику"
+        <a href="#cta-final" class="btn btn--primary" aria-label="Записаться на вводную встречу"
            data-cta="scroll-to-cta" data-position="hero">
-          Записаться на бесплатную диагностику
+          Записаться на вводную встречу
         </a>
       </div>
     </div>
